created db and models

--- a/streaming_transition/templates/base/landing-page.html
+++ b/streaming_transition/templates/base/landing-page.html
@@ -4,7 +4,7 @@
 
     <div class="testDiv">
         <h1>Welcome!</h1>
-        <p class="whiteColor">{{ message }}</p>
+        <p class="whiteColor">{{ username }}</p>
     </div>
 
 {% endblock %}
