organized logins to be handled within directory app

--- a/directory/templates/base/directory-main.html
+++ b/directory/templates/base/directory-main.html
@@ -5,12 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href="{% static 'css/stylesheet.css' %}">
-    <title>Streaming Transition</title>
+    <title>Directory</title>
 </head>
 <body>
     {% block content %}
     {% endblock %}
-    <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
