--- a/directory/templates/base/login.html
+++ b/directory/templates/base/login.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include 'base/main.html' %}
+{% include 'base/directory-main.html' %}
 
 {% block content %}
     <h2>Login</h2>
