created visit table and started homepage for app

--- a/directory/templates/base/directory.html
+++ b/directory/templates/base/directory.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Directory</h1>
+{% include 'base/directory-main.html' %}
+
+{% block content %}
+
+    <h1>Southgate Resources Directory</h1>
     <a href="/streaming-transition/">Streaming Transition</a>
-</body>
-</html>
+    
+{% endblock %}
