half way through loading apartment numbers into the database

--- a/streaming_transition/templates/base/streaming-transition-home.html
+++ b/streaming_transition/templates/base/streaming-transition-home.html
@@ -20,6 +20,7 @@
             <a href="#" class="btnLink">Recommendations</a>
         </div>
         <div class="row3">
+            <a href="#" class="btnLink">Upcoming Visits</a>
             <a href="#" class="btnLink">Schedule Visit</a>
         </div>
     </div>
