--- a/streaming_transition/static/css/streaming-transition-stylesheet.css
+++ b/streaming_transition/static/css/streaming-transition-stylesheet.css
@@ -21,13 +21,17 @@ body {
     border-radius: 10px;
     margin: 1rem;
     box-shadow: -10px 0px 10px 0px rgba(0, 0, 0, 0.4);
-    transition: all 0.2s ease-in-out;
+    transition: all 0.15s ease-in-out;
 }
 
 .btnLink:hover {
     cursor: pointer;
-    transform: translate(10px, -5px);
+    transform: translate(10px, -5px) scale(1.1);
     box-shadow: -25px 10px 25px 0px rgba(0, 0, 0, 0.6);
+}
+
+.btnLink:active {
+    transform: scale(1.05);
 }
 
 .linkContainer {
