created route for details in completed to apartment page

--- a/streaming_transition/templates/base/complete.html
+++ b/streaming_transition/templates/base/complete.html
@@ -26,7 +26,7 @@
             <td>
                 <p>{{ apartment.date_completed }}</p>
             </td>
-            <td><a href="#">Details</a></td>
+            <td><a href="{% url 'apartment' pk=apartment.apartment_number %}">Details</a></td>
             <td>
                 <button class="not-complete-button" data-apartment-id="{{ apartment.id }}">
                     Not Complete
@@ -57,7 +57,7 @@
             <td>
                 <p>{{ apartment.date_completed }}</p>
             </td>
-            <td><a href="#">Details</a></td>
+            <td><a href="{% url 'apartment' pk=apartment.id %}">Details</a></td>
             <td>
                 <button class="not-complete-button" data-apartment-id="{{ apartment.id }}">
                     Not Complete
