--- a/streaming_transition/static/css/streaming-transition-stylesheet.css
+++ b/streaming_transition/static/css/streaming-transition-stylesheet.css
@@ -40,6 +40,21 @@ body {
     color: black;
 }
 
+.detailContainer {
+    width: 50%;
+    min-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: whitesmoke;
+    border: 2px solid darkmagenta;
+}
+
+.detailContainer li {
+    list-style-type: none;
+    padding: 10px;
+    border-bottom: 2px solid black;
+}
+
 form {
     display: flex;
     justify-content: center;
