completed the upcoming visits and complete button changed model to reflect time finished

--- a/streaming_transition/templates/base/streaming-transition-home.html
+++ b/streaming_transition/templates/base/streaming-transition-home.html
@@ -24,7 +24,7 @@
             <a href="{% url 'complete' %}" class="btnLink">completed</a>
         </div>
         <div class="row2">
-            <a href="#" class="btnLink">Upcoming Visits</a>
+            <a href="{% url 'upcoming' %}" class="btnLink">Upcoming Visits</a>
             <a href="#" class="btnLink">Schedule Visit</a>
         </div>
         <div class="row3">
