--- a/streaming_transition/templates/base/streaming-transition-home.html
+++ b/streaming_transition/templates/base/streaming-transition-home.html
@@ -35,6 +35,8 @@
         </div>
     </div>
 
+    {% include 'base/footer.html' %}
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
         });
