--- a/streaming_transition/templates/base/upcoming.html
+++ b/streaming_transition/templates/base/upcoming.html
@@ -33,6 +33,10 @@
             {% endfor %}
         </tbody>
     </table>
+
+    {% include 'base/footer.html' %}
+
+    
 {% endblock %}
 
 <script>
