add url to home page

--- a/streaming_transition/templates/base/streaming-transition-home.html
+++ b/streaming_transition/templates/base/streaming-transition-home.html
@@ -25,7 +25,7 @@
         </div>
         <div class="row2">
             <a href="{% url 'upcoming' %}" class="btnLink">Upcoming Visits</a>
-            <a href="#" class="btnLink">Schedule Visit</a>
+            <a href="{% url 'visit-home-form' %}" class="btnLink">Schedule Visit</a>
         </div>
         <div class="row3">
             <form>
