--- a/streaming_transition/templates/base/streaming-transition-home.html
+++ b/streaming_transition/templates/base/streaming-transition-home.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' media='screen' href="{% static 'css/streaming-transition-stylesheet.css' %}">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}">
     <title>Streaming Transition</title>
 </head>
 <body>
