modified css on directory and login and linked schedule in uncomplete page

--- a/directory/templates/base/directory.html
+++ b/directory/templates/base/directory.html
@@ -1,8 +1,23 @@
 {% include 'base/directory-main.html' %}
 
+<style>
+    body {
+        background-color: #f5f5f5;
+    }
+
+    h1 {
+        text-align: center;
+    }
+</style>
+
 {% block content %}
 
     <h1>Southgate Resources Directory</h1>
-    <a href="/streaming-transition/">Streaming Transition</a>
+    <ul>
+        <li>
+            <a href="/streaming-transition/">Streaming Transition</a>
+        </li>
+    </ul
+    
     
 {% endblock %}
