--- a/streaming_transition/templates/base/visit-form.html
+++ b/streaming_transition/templates/base/visit-form.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="header">
-        <h1>Add a new device</h1>
+        <h1>Schedule A Visit</h1>
         <h2>Apartment: {{ apartment.apartment_number }}</h2>
     </div>
 
@@ -28,5 +28,5 @@
     </div>
 
     {% include 'base/footer.html' %}
-    
+
 {% endblock %}
