--- a/directory/templates/base/login.html
+++ b/directory/templates/base/login.html
@@ -1,6 +1,22 @@
 {% load static %}
 {% include 'base/directory-main.html' %}
 
+<style>
+    h2 {
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    form {
+        width: 50%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+</style>
+
 {% block content %}
     <h2>Login</h2>
     <form method="post" action="{% url 'login' %}?next={{ request.GET.next }}">
