--- a/streaming_transition/templates/base/visit-home-form.html
+++ b/streaming_transition/templates/base/visit-home-form.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="header">
-        <h1>Add a new device</h1>
+        <h1>Schedule A Visit</h1>
     </div>
 
 
